Adding some concepts of SQLite

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".VideoPlayerActivity" />
         <activity android:name=".UserPreferencesActivity" />
         <activity android:name=".MyNotesActivity" />
+        <activity android:name=".SQLiteActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
